syntax = "proto3";

import "common/model/model.proto";
import "coffeehouse/v1/model/model.proto";

option java_multiple_files = true;
option java_package = "com.sychev.coffeehouse.grpc.model.v1";


message GGetAllCafesAroundClientResponse {
    GPage page = 1;
    repeated GCafeInfo cafes = 2;
}

message GGetAllCafesResponse {
    GPage page = 1;
    repeated GCafeInfo cafes = 2;
}

message GGetCafeResponse {
    GCafeInfo cafe = 1;
}

message GAddCafeResponse {
    GUuid cafeUid = 1;
}

/*message GGetAllProductsResponse {
    GPage page = 1;
    repeated GProductInfo products = 2;
}

message GGetProductResponse {
    GProductInfo product = 1;
}

message GGetProductsByCafeResponse {
    GPage page = 1;
    repeated GProductInfo products = 2;
}

message GAddProductResponse {
    GUuid productUid = 1;
}*/

