syntax = "proto3";

import "common/model/model.proto";
import "coffeehouse/v1/model/request.proto";
import "coffeehouse/v1/model/response.proto";

option java_multiple_files = true;
option java_package = "com.sychev.coffeehouse.grpc.service.v1";


service CoffeeHouseServiceV1 {

    rpc getAllCafes (GGetAllCafesRequest) returns (GGetAllCafesResponse);

    rpc getAllProducts (GGetAllProductsRequest) returns (GGetAllProductsResponse);

    rpc getProductsByCafe (GGetProductsByCafeRequest) returns (GGetProductsByCafeResponse);

    rpc getProduct (GGetProductRequest) returns (GGetProductResponse);

    rpc getCafe (GGetCafeRequest) returns (GGetCafeResponse);

    rpc addCafe (GAddCafeRequest) returns (GAddCafeResponse);

    rpc addProduct (GAddProductRequest) returns (GAddProductResponse);

    rpc removeCafe (GRemoveCafeRequest) returns (Empty);

    rpc removeProduct (GRemoveProductRequest) returns (Empty);

}